# gemmi

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js
.github/: dependabot.yml
.github/workflows/: deploy_documentation.yml  run_cpp_tests.yml
d0/d06/: structMatrixSplit.html  structMatrixSplit.js
d0/d84/: structFloatingPointTraits_3_01float_01_4-members.html
d0/dec/: structfp_1_1FloatingPointTraits_3_01float_01_4.html
d0/dfc/: structmatrix_1_1MatrixView-members.html
d1/d2c/: structFloatingPointTraits_3_01double_01_4-members.html
d1/da4/: structmultiterm_1_1config.html  structmultiterm_1_1config.js
d2/d27/: structmultiterm_1_1OperandPreparationConfig-members.html
d2/dbf/: structmultiterm_1_1OperandPreparationConfig.html  structmultiterm_1_1OperandPreparationConfig.js
d2/de5/: structgetStorageFormat_3_01float_01_4-members.html
d3/d1a/: structmultiterm_1_1multiplicationSchedule__coll__graph.map  structmultiterm_1_1multiplicationSchedule__coll__graph.md5
d3/d74/: structMatrixSplit__coll__graph.map  structMatrixSplit__coll__graph.md5
d3/d9c/: structget__storage__format_3_01float_01_4.html
d4/da8/: structget__storage__format_3_01double_01_4.html
d5/d02/: structmultiterm_1_1Decomposition__coll__graph.map  structmultiterm_1_1Decomposition__coll__graph.md5
d5/db0/: structmultiterm_1_1preparedOperand__coll__graph.map  structmultiterm_1_1preparedOperand__coll__graph.md5
d6/d5d/: structgetStorageFormat.html
d6/d74/: structmultiterm_1_1config-members.html
d6/d95/: structmultiterm_1_1multiplicationSchedule-members.html
d6/dfb/: structmultiterm_1_1DerivedParameters.html  structmultiterm_1_1DerivedParameters.js
d7/d80/: structmatrix_1_1MatrixView.html  structmatrix_1_1MatrixView.js
d7/d90/: structmultiterm_1_1Decomposition.html  structmultiterm_1_1Decomposition.js
d7/dcf/: structmultiterm_1_1preparedOperand.html  structmultiterm_1_1preparedOperand.js
d8/d0a/: structFloatingPointTraits_3_01float_01_4.html
d8/d2f/: structmultiterm_1_1Decomposition-members.html
d8/d3f/: structFloatingPointTraits.html
d8/d66/: structfp_1_1FloatingPointTraits.html
d8/dc2/: structget__storage__format_3_01float_01_4-members.html
d9/d02/: structfp_1_1FloatingPointTraits_3_01float_01_4-members.html
d9/dc8/: structmultiterm_1_1preparedOperand-members.html
da/d24/: structfp_1_1FloatingPointTraits_3_01double_01_4.html
da/dd9/: structMatrixView.html  structMatrixView.js
da/df5/: structmultiterm_1_1multiplicationSchedule.html  structmultiterm_1_1multiplicationSchedule.js
db/d5e/: structmultiterm_1_1MatrixSplit__coll__graph.map  structmultiterm_1_1MatrixSplit__coll__graph.md5
db/d68/: structmultiterm_1_1MatrixSplit-members.html
db/dbc/: structget__storage__format.html
dc/de8/: gemmi_8hpp.html  gemmi_8hpp.js  gemmi_8hpp_source.html
dc/de9/: structgetStorageFormat_3_01double_01_4.html
dc/dec/: structfp_1_1FloatingPointTraits_3_01double_01_4-members.html
dd/d35/: structMatrixView-members.html
dd/dce/: structMatrixSplit-members.html
dd/df7/: structgetStorageFormat_3_01double_01_4-members.html
de/d51/: structmultiterm_1_1DerivedParameters-members.html
de/d55/: structgetStorageFormat_3_01float_01_4.html
de/daa/: structFloatingPointTraits_3_01double_01_4.html
df/d1c/: gemmi_8hpp__incl.map  gemmi_8hpp__incl.md5
df/dc6/: structmultiterm_1_1MatrixSplit.html  structmultiterm_1_1MatrixSplit.js
docs/: CMakeLists.txt  Doxyfile.in
html/: annotated.html  annotated_dup.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions_func.html  functions_vars.html  globals_enum.html  graph_legend.html  index.html  navtreedata.js
html/d0/d06/: structMatrixSplit.js
html/d3/d9c/: structget__storage__format_3_01float_01_4.html
html/d6/d31/: structget__storage__format_3_01double_01_4-members.html
html/db/dbc/: structget__storage__format.html
html/dc/de8/: gemmi_8hpp.html  gemmi_8hpp.js
html/df/d1c/: gemmi_8hpp__incl.md5
html/search/: all_0.js  all_1.js  all_6.js  all_7.js  all_9.js  all_e.js  enums_1.js  enums_3.js  enumvalues_2.js  functions_5.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js  variables_0.js
include/: gemmi.hpp  utilities.hpp
include/core/: floating_point.hpp  matrix_view.hpp  types.hpp
include/multiterm/: accumulation.hpp  gemmi.hpp  operand.hpp  operand_prep.hpp  schedule.hpp  types.hpp
latex/: annotated.tex  files.tex  index.tex  refman.tex
latex/d0/d06/: structMatrixSplit.tex
latex/d3/d74/: structMatrixSplit__coll__graph.md5
latex/d3/d9c/: structget__storage__format_3_01float_01_4.tex
latex/d4/da8/: structget__storage__format_3_01double_01_4.tex
latex/db/dbc/: structget__storage__format.tex
latex/dc/de8/: gemmi_8hpp.tex  gemmi_8hpp_source.tex
latex/df/d1c/: gemmi_8hpp__incl.md5
mex/: CMakeLists.txt  compile_mex.m  gemmi.cpp  gemmi.m  run_matlab_tests.m  test_gemmi.m
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+16 more)
tests/: CMakeLists.txt  main.cpp  tests.cpp  utilities.hpp
